--- a/popup.html
+++ b/popup.html
@@ -114,12 +114,12 @@
 
     </div>
 </div>
-<form action="http://127.0.0.1:8000/getdata/" method="POST">
+<!--<form action="http://127.0.0.1:8000/getdata/" method="POST">
   <input type="hidden" name="url" placeholder="URL" id="url" required><br>
   <input type="hidden" name="time" placeholder="TIME" id="time" required><br>
   <input type="hidden" name="tabid" placeholder="TAB_ID" id="tabid"><br><br>
   <button type="submit" name="button" id="submit" style="display: none;">Submit the data</button>
-</form>
+</form> -->
 </body>
 <script>
     $("#myModal").modal()
