--- a/popup.html
+++ b/popup.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <script type="text/javascript" src="background.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
-<body style="width:500px;">
+<body style="width:505px;">
 
-<div id="myModal" style="width:500px; ">
+<div id="myModal" style="width:505px; ">
     <div class="modal-dialog">
 
         <!-- Modal content-->
@@ -17,7 +18,8 @@
 
             <div class="modal-body">
                 <!-- general form elements -->
-                <b>Welcome</b> to <img src="icon2.png" width="100px"> Store<br><hr>
+                <p > <img src="icon2.png" width="100px">&nbsp;<h5 style="margin:-8.7% 0 0 22.5% ;size:45px;color: royalblue;font-family: 'Open Sans', sans-serif;"><b><i>REFLEX
+            </b></i></h5></p><hr>
 
                 <!-- /.box-header -->
                 <!-- form start -->
@@ -40,27 +42,27 @@
                         <div class="row">
                             <div class="col-lg-2" style="width: 50px;">
                                 <div class="card" style="width: 100px; ">
-                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;" alt="Card image cap">
+                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;height: 100px;" alt="Card image cap" id="a1">
                                     <div class="card-block">
-                                        <p class="card-text">Price</p>
+                                        <p class="card-text" id="A11">Price</p>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 100px; margin-top: -630%; margin-left: 120px;">
-                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;" alt="Card image cap">
+                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;height: 100px;" alt="Card image cap" id="a2">
                                     <div class="card-block">
-                                        <p class="card-text">Price</p>
+                                        <p class="card-text" id="A12">Price</p>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 100px; margin-top: -630%; margin-left: 240px;">
-                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;" alt="Card image cap">
+                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;height: 100px;" alt="Card image cap" id="a3">
                                     <div class="card-block">
-                                        <p class="card-text">Price</p>
+                                        <p class="card-text" id="A13">Price</p>
                                     </div>
                                 </div>
-                                <div class="card" style="width: 100px; margin-top: -630%; margin-left: 240px;">
-                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;" alt="Card image cap">
+                                <div class="card" style="width: 100px; margin-top: -630%; margin-left: 360px;" id="a4">
+                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;height: 100px;" alt="Card image cap">
                                     <div class="card-block">
-                                        <p class="card-text">Price</p>
+                                        <p class="card-text" id="A14">Price</p>
                                     </div>
                                 </div>
                             </div>
@@ -79,29 +81,31 @@
                         <div class="row">
                             <div class="col-lg-2" style="width: 50px;">
                                 <div class="card" style="width: 100px; ">
-                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;" alt="Card image cap">
+                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;height: 100px;" alt="Card image cap" id="b1">
                                     <div class="card-block">
-                                        <p class="card-text">Price</p>
+                                        <p class="card-text" id="B11">Price</p>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 100px; margin-top: -630%; margin-left: 120px;">
-                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;" alt="Card image cap">
+                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;height: 100px;" alt="Card image cap" id="b2">
                                     <div class="card-block">
-                                        <p class="card-text">Price</p>
+                                        <p class="card-text" id="B12">Price</p>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 100px; margin-top: -630%; margin-left: 240px;">
-                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;" alt="Card image cap">
+                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;height: 100px;" alt="Card image cap" id="b3">
                                     <div class="card-block">
-                                        <p class="card-text">Price</p>
+                                        <p class="card-text" id="B13">Price</p>
                                     </div>
                                 </div>
-                                <div class="card" style="width: 100px; margin-top: -630%; margin-left: 240px;">
-                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;" alt="Card image cap">
+
+                                <div class="card" style="width: 100px; margin-top: -630%; margin-left: 360px;">
+                                    <img class="card-img-top" src="icon.jpg" style="width: 100px;height: 100px;" alt="Card image cap" id="b4">
                                     <div class="card-block">
-                                        <p class="card-text">Price</p>
+                                        <p class="card-text" id="B14">Price</p>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
 
@@ -114,14 +118,8 @@
 
     </div>
 </div>
-<!--<form action="http://127.0.0.1:8000/getdata/" method="POST">
-  <input type="hidden" name="url" placeholder="URL" id="url" required><br>
-  <input type="hidden" name="time" placeholder="TIME" id="time" required><br>
-  <input type="hidden" name="tabid" placeholder="TAB_ID" id="tabid"><br><br>
-  <button type="submit" name="button" id="submit" style="display: none;">Submit the data</button>
-</form> -->
 </body>
 <script>
-    $("#myModal").modal()
+
 </script>
 </html>
