notification badge added

--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="custom.css">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <script type="text/javascript" src="background.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -19,7 +21,20 @@
             <div class="modal-body">
                 <!-- general form elements -->
                 <p > <img src="icon2.png" width="100px">&nbsp;<h5 style="margin:-8.7% 0 0 22.5% ;size:45px;color: royalblue;font-family: 'Open Sans', sans-serif;"><b><i>REFLEX
-            </b></i></h5></p><hr>
+            </b></i>
+                <i class="fa fa-bell" style="color: #222;margin-left: 70%;"></i>
+                <!--<div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" id="menu1" type="button" data-toggle="dropdown">Dropdown Example
+                        <span class="caret"></span></button>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">HTML</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">CSS</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">JavaScript</a></li>
+                        <li role="presentation" class="divider"></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
+                    </ul>
+                </div>-->
+                <i class="fa fa-bell-o" style="color: #222;margin-left: -15%;"></i></h5></p>  <hr>
 
                 <!-- /.box-header -->
                 <!-- form start -->
