--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
 </head>
 <body style="width:505px;">
 
-<div id="myModal" style="width:505px; ">
+<div style="width:505px; ">
     <div class="modal-dialog">
 
         <!-- Modal content-->
@@ -20,9 +20,9 @@
 
             <div class="modal-body">
                 <!-- general form elements -->
-                <p > <img src="icon2.png" width="100px">&nbsp;<h5 style="margin:-8.7% 0 0 22.5% ;size:45px;color: royalblue;font-family: 'Open Sans', sans-serif;"><b><i>REFLEX
+                <p > <img src="icon2.png" width="100px">&nbsp;<h5 style="margin:-8.7% 0 0 22.5% ;size:45px;color: royalblue;font-family: 'Open Sans', sans-serif;"><b><i>Reflex
             </b></i>
-                <i class="fa fa-bell" style="color: #222;margin-left: 70%;"></i>
+                <i class="fa fa-bell" style="color: #222;margin-left: 70%;" id="notification"></i>
                 <!--<div class="dropdown">
                     <button class="btn btn-primary dropdown-toggle" id="menu1" type="button" data-toggle="dropdown">Dropdown Example
                         <span class="caret"></span></button>
@@ -34,7 +34,9 @@
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
                     </ul>
                 </div>-->
-                <i class="fa fa-bell-o" style="color: #222;margin-left: -15%;"></i></h5></p>  <hr>
+                <i class="" style="color: #222;margin-left: -15%;"></i></h5></p>  <hr>
+                <div id="notinfo"></div>
+                <div id="data">
 
                 <!-- /.box-header -->
                 <!-- form start -->
@@ -132,9 +134,7 @@
         </div>
 
     </div>
-</div>
-</body>
-<script>
+    </div></div>
 
-</script>
+</body>
 </html>
